--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@octokit/rest": "^20.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
